OBPIH-7251 Fixed position columns and horizontal scrolling for new react tables

--- a/src/js/components/DataTable/DataTable.scss
+++ b/src/js/components/DataTable/DataTable.scss
@@ -13,8 +13,9 @@
 .app-react-table {
   border: none;
   border-radius: 4px;
-
-  &.hide-data .rt-tbody {
+  overflow: hidden;
+  &.hide-data .rt-tbody,
+  &.hide-data .rt-tbody-v2 {
     display: none;
   }
 
@@ -100,7 +101,7 @@
 
     }
 
-    .rt-tbody {
+    .rt-tbody, .rt-tbody-v2 {
       .rt-tr-group {
         border-bottom: 1px solid var(--gray-100);
       }
